tests/fail/zero_rate.stderr
error: `rate` must be positive
 --> tests/fail/zero_rate.rs:9:34
  |
9 |     let _wave = sine_wave!(rate: 0);
  |                                  ^
